Fix issue where a vertical scrollbar caused a horizontal scrollbar

--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -15,7 +15,7 @@ body {
 	display: flex;
 	flex-flow: column nowrap;
 	min-height: 100vh;
-	width: 100vw;
+	width: 100%;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
